# spacedock

./: .env  Dockerfile  Dockerfile.bashate  Dockerfile.cabal  Dockerfile.clj-kondo  Dockerfile.clojure  Dockerfile.clojure-layer  Dockerfile.cuda  Dockerfile.docker-layer  Dockerfile.docker-lsp  Dockerfile.docker-lsp-dep  Dockerfile.emacs  Dockerfile.emmy-spok  Dockerfile.go  Dockerfile.gpu-layer  Dockerfile.hadolint  Dockerfile.hadolint-dep  Dockerfile.haskell  Dockerfile.haskell-dep  Dockerfile.jdk  Dockerfile.joker  Dockerfile.llvm  Dockerfile.mlir  Dockerfile.node  Dockerfile.nsight-compute  Dockerfile.nvm  Dockerfile.nvm-dep  Dockerfile.python  Dockerfile.shell-scripts-layer  Dockerfile.shellcheck  Dockerfile.shfmt  Dockerfile.spacedock-docker  Dockerfile.spellcheck  Dockerfile.template-dep  Dockerfile.xdg  README.md  cli.sh  compose-common.yml  compose-emacs.yml  compose-emmy-spok.yml  (+20 more)
emacs/: .env  Dockerfile  compose.yml
layers/: default.env
layers/clojure/: .env  Dockerfile  compose.yml
layers/docker/: Dockerfile  compose.yml
layers/gpu/: .env  Dockerfile  compose.yml
layers/shell-scripts/: Dockerfile  compose.yml
layers/spok/: Dockerfile  compose.yml
runtimes/: default.env
runtimes/emmy/: Dockerfile  compose.yml  override.env
scripts/: Dockerfile.template  check-deps.sh  entrypoint.sh  new-dep.sh  spok.sh  template-tools.sh  tools-template.sh
tmp/: compose-staging.yml  emmy-spok.env  entrypoint.sh
tmp/layers/clojure/: Dockerfile  compose.yml
tmp/layers/docker/: Dockerfile
tmp/layers/gpu/: Dockerfile  compose.yml
utils/: .env  Dockerfile  compose.yml
